log/build_2025-02-06_22-43-34/controller/stderr.log
  File "/home/daniel/controlbot_ws/install/controller/lib/python3.10/site-packages/controller/mtr_ctrl.py", line 26
    self.timer = self.create_timer(0.55555lf.timer_callback)
                                         ^
SyntaxError: invalid decimal literal

